# eeg-pyriemann-pipeline

./: .gitignore  README.md  configs.yaml  main.py  pyproject.toml  requirements.txt
.github/workflow/: pytest.yml
.github/workflows/: pytest.yml
docs/: data_contract.md
experiments/: benchmark_monte-carlo.py  pyriemann_benchmark.py  riemanndsp_benchmark.py
notebooks/: tutorial_moabb.ipynb
scripts/: export_results.py  get_data.py  process_data.py
src/: __init__.py  moabb_wrapper.py  process.py  utils.py
src/data/: __init__.py  basic_type.py  extractor.py  hdf5_manager.py  moabb_wrapper.py
src/models/: __init__.py  base.py  sklearn_wrapper.py
src/processing/: __init__.py  pipeline.py
src/tracking/: __init__.py  mlflow_tracker.py  orchestrator.py
src/utils/: __init__.py  moabb_config.py  utils.py
src/visualization/: __init__.py  plots.py
test/: moabb_wrapper_test.py
tests/: test_data_getter.py
