[project]
name = "moabb-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cookiecutter-data-science>=2.2.0",
    "dask>=2025.5.1",
    "filelock>=3.20.0",
    "matplotlib>=3.10.1",
    "mlflow>=3.1.0",
    "mne>=1.9.0",
    "moabb>=1.2.0",
    "numpy>=1.26.4",
    "optuna>=4.4.0",
    "optuna-integration[mlflow]>=4.4.0",
    "pillow>=12.0.0",
    "pip>=25.1",
    "pyriemann>=0.7",
    "pytest>=8.3.5",
    "seaborn>=0.12.2",
    "streamlit>=1.48.1",
    "umap-learn>=0.5.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]
